--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
+    "@angular/animations": "^4.0.0",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
@@ -30,6 +30,7 @@
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
     "ts-md5": "^1.2.4",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
